# AgentXYZ

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
agentxyz/: __init__.py  __main__.py
agentxyz/agent/: __init__.py  context.py  loop.py  memory.py  skills.py  subagent.py
agentxyz/agent/tools/: __init__ .py  base.py  cron.py  filesystem.py  http_request.py  mcp.py  mcp_client.py  message.py  registry.py  shell.py  spawn.py  task_plan.py  web.py
agentxyz/bus/: __init__.py  events.py  queue.py
agentxyz/channels/: __init__.py  base.py  email.py  manager.py  registry.py  telegram.py
agentxyz/cli/: __init__.py  commands.py
agentxyz/config/: __init__.py  loader.py  paths.py  schema.py
agentxyz/cron/: __init__.py  service.py  types.py
agentxyz/gateway/: __init__.py  auth.py  middleware.py  schemas.py  server.py  websocket.py
agentxyz/gateway/routes/: __init__.py  admin.py  auth_deps.py  chat.py  common.py  stream.py  transcribe.py  websocket.py
agentxyz/heartbeat/: __init__.py  service.py
agentxyz/providers/: __init__.py  base.py  custom_provider.py  litellm_provider.py  registry.py  transcription.py
agentxyz/security/: network.py
agentxyz/session/: __init__.py  manager.py
agentxyz/skills/: README.md
agentxyz/skills/agent-skills/: SKILL.md
agentxyz/skills/blogwatcher/: SKILL.md
agentxyz/skills/cron/: SKILL.md
agentxyz/skills/gifgrep/: SKILL.md
agentxyz/skills/github/: SKILL.md
agentxyz/skills/qwen-code/: SKILL.md
agentxyz/skills/skill-creator/: SKILL.md
agentxyz/skills/skill-creator/scripts/: init_skill.py  package_skill.py  quick_validate.py
agentxyz/skills/summarize/: SKILL.md
agentxyz/skills/tmux/: SKILL.md
agentxyz/skills/tmux/scripts/: find-sessions.sh
agentxyz/skills/weather/: SKILL.md
agentxyz/templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  USER.md
agentxyz/templates/memory/: MEMORY.md
agentxyz/utils/: __init__.py  evaluator.py  helpers.py
