[project]
name = "agentxyz"
version = "0.1.4"
description = "A personal AI agent/assistant"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{ name = "MaxSummerX" }]
keywords = ["ai", "agent", "chatbot"]
readme = "README.md"
urls.Repository = "https://github.com/MaxSummerX/AgentXYZ"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "fastapi[standard]>=0.133.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "loguru>=0.7.3",
    "httpx>=0.28.1",
    "litellm>=1.81.15",
    "mcp>=1.26.0",
    "exa-py>=2.4.0",
    "ddgs>=9.10.0",
    "readability-lxml>=0.8.4.1",
    "json-repair>=0.58.0",
    "faster-whisper>=1.2.1",
    "prompt-toolkit>=3.0.52",
    "python-telegram-bot[socks]>=22.6",
    "aiofiles>=25.1.0",
    "croniter>=6.0.0",
    "typer>=0.24.1",
    "rich>=14.3.3",
    "python-socks[asyncio]>=2.8.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.3.0",
    "ruff>=0.15.0",
    "bandit>=1.8.3",
    "types-aiofiles>=25.1.0",
]

[project.scripts]
agentxyz = "agentxyz.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentxyz"]

[tool.hatch.build.targets.wheel.sources]
"agentxyz" = "agentxyz"

[tool.hatch.build]
include = [
    "agentxyz/**/*.py",
    "agentxyz/templates/**/*.md",
    "agentxyz/skills/**/*.md",
    "agentxyz/skills/**/*.sh",
]

[tool.hatch.build.targets.sdist]
include = [
    "agentxyz/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["venv", ".venv", ".git", "__pycache__", ".idea"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle — стиль кода: отступы, пробелы, пустые строки (PEP8)
    "F",     # pyflakes — логические ошибки: неиспользуемые импорты, неопределённые переменные
    "I",     # isort — порядок и группировка импортов
    "N",     # pep8-naming — соглашения об именовании: классы CamelCase, функции snake_case
    "W",     # pycodestyle warnings — предупреждения: пробелы в конце строк, пустые строки
    "B",     # flake8-bugbear — потенциальные баги и плохие практики
    "C4",    # flake8-comprehensions — оптимизация list/dict/set comprehensions
    "UP",    # pyupgrade — устаревший синтаксис: str() → f"", Optional[x] → x | None
    "ASYNC", # flake8-async — антипаттерны в async коде: блокирующие вызовы в корутинах
    "RUF",   # ruff-specific — собственные правила ruff: неоднозначный Unicode, лишние noqa
    "TCH",   # flake8-type-checking — импорты только для type hints переносит в TYPE_CHECKING
]
ignore = [
    "E203",    # пробел перед ':' — конфликтует с Black форматтером
    "RUF001",  # неоднозначные символы Unicode в строках (кириллица vs латиница)
    "RUF002",  # неоднозначные символы Unicode в docstrings
    "RUF003",  # неоднозначные символы Unicode в комментариях
    "E501",    # строка длиннее line-length — отдано на откуп форматтеру
    "B008",    # вызов функции как дефолтный аргумент (нужно для FastAPI Depends)
    "ASYNC110", # использование asyncio.sleep(0) вместо anyio
]


[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy",]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".idea",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=agentxyz --cov-report=term-missing"
